--- a/index.html
+++ b/index.html
@@ -1,22 +1,17 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="./valentines-love-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- TODO: Set the document title to the name of your application -->
     <title>Decree</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Software engineer & Advocate love decree" />
+    <meta name="author" content="Lover" />
 
-    <!-- TODO: Update og:title to match your application name -->
     <meta property="og:title" content="Decree" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Software engineer & Advocate love decree" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="./valentines-love-svgrepo-com.svg" />
   </head>
 
   <body>
