fix: rose in sealed envelope and whatsapp meta data added

--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="./valentines-love-svgrepo-com.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Decree</title>
+    <title>Valentine Decree</title>
     <meta name="description" content="Software engineer & Advocate love decree" />
     <meta name="author" content="Lover" />
 
-    <meta property="og:title" content="Decree" />
+    <meta property="og:title" content="Valentine Decree" />
     <meta property="og:description" content="Software engineer & Advocate love decree" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="./valentines-love-svgrepo-com.svg" />
+    <meta property="og:url" content="https://limegreen-stork-844040.hostingersite.com/" />
+    <meta property="og:site_name" content="Valentine Decree" />
+    <meta property="og:image" content="https://limegreen-stork-844040.hostingersite.com/valentines-love-svgrepo-com.svg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
   </head>
 
   <body>
