fix: url in the meta tag fix to point to github pages

--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <meta property="og:title" content="Valentine Decree" />
     <meta property="og:description" content="Software engineer & Advocate love decree" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://limegreen-stork-844040.hostingersite.com/" />
+    <meta property="og:url" content="https://sekhar-55.github.io/the-golden-thread/" />
     <meta property="og:site_name" content="Valentine Decree" />
-    <meta property="og:image" content="https://limegreen-stork-844040.hostingersite.com/valentines-love-svgrepo-com.svg" />
+    <meta property="og:image" content="https://sekhar-55.github.io/the-golden-thread/valentines-love-svgrepo-com.svg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
   </head>
