GSC verification tag added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <meta property="og:image" content="https://sekhar-55.github.io/the-golden-thread/valentines-love-svgrepo-com.svg" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
+    <meta name="google-site-verification" content="0k0AjDIgFmqjR-Uo5LOZdamGvOBHPbmeG1n84GD-uog" />
   </head>
 
   <body>
